@@ -10,10 +10,12 @@ jobs:
     strategy:
       matrix:
         perl-version:
-          - '5.22'
           - '5.30'
           - '5.32'
           - '5.34'
+          - '5.36'
+          - '5.38'
+          - '5.40'
     container:
       image: perl:${{ matrix.perl-version }}
     steps:
