@@ -1,9 +1,9 @@
 # -*- mode: perl -*-
-requires 'perl'          => 'v5.22';
+requires 'perl'          => 'v5.30';
 requires 'DBIx::Class'   => '0.082843';
 requires 'SQL::Abstract' => '2.000001';
 
-test_requires 'DBD::SQLite'     => '0';
+test_requires 'DBD::SQLite'     => '1.68';
 test_requires 'SQL::Translator' => '1.62';
 test_requires 'Test::More'      => '0.98';
 test_requires 'Test2::V0'       => '0.000155';
